# tetv-graphics

./: CMakeLists.txt  LICENSE  README  README.md  TETV_ScoreBar.sln  Thumbs.db
FairPlayTest/: FairPlayTest.sln
FairPlayTest/FairPlayTest/: FairPlayTest.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
FairPlayTest/FairPlayTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
FairPlayTest/FairPlayTest/Scoreboard Data/: Football_Record.cs  Game_Clock_Record.cs  ScoreboardInterface.cs  SerialDelegates.cs  Soccer_Record.cs
Graphics/: Thumbs.db  tetv_scorebar.fla  tetv_scorebar.swd  tetv_scorebar.swf  tetv_scoreboard_v2.fla
TETV_ScoreBar/: ConestogaPlayers.sdf  ConestogaPlayersDataSet.Designer.cs  ConestogaPlayersDataSet.cs  ConestogaPlayersDataSet.xsd  ConestogaPlayersDataSet.xss  Config.cs  ConfigKey.cs  Controls.Designer.cs  Controls.cs  Controls.resx  CustomControls.cs  Display.Designer.cs  Display.cs  Display.resx  Game.cs  Program.cs  Settings.Designer.cs  Settings.cs  Settings.resx  Stats.Designer.cs  Stats.cs  Stats.resx  TETV_ScoreBar.csproj  TETV_ScoreBar.csproj.old  TETV_ScoreBar_TemporaryKey.pfx  Thumbs.db  Utils.cs
TETV_ScoreBar/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
TETV_ScoreBar/Propertiess/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
TETV_ScoreBar/Scoreboard Data/: Soccer_Record.cs
TETV_ScoreBar/resources/: Thumbs.db
src/: main.cpp  test.cpp  test.h
tetv-graphics/: tetv-graphics.sln
tetv-graphics/tetv-graphics/: consts.h  main.cpp  resources.qrc  tetv-graphics.vcxproj
tetv-graphics/tetv-graphics-installer/: tetv-graphics-installer.vdproj
tetv-graphics/tetv-graphics/net/: AbstractNetHandler.h  NetAbstract.cpp  NetAbstract.h  NetMaster.cpp  NetMaster.h  NetPacket.h  NetSlave.cpp  NetSlave.h
tetv-graphics/tetv-graphics/res/css/: application.css
tetv-graphics/tetv-graphics/ui/controls/: TPushButton.cpp  TPushButton.h
tetv-graphics/tetv-graphics/ui/panels/: AbstractPanel.cpp  AbstractPanel.h  NetMasterPanel.cpp  NetMasterPanel.h  TestPanel.cpp  TestPanel.h
tetv-graphics/tetv-graphics/ui/windows/: modewindow.cpp  modewindow.h  programwindow.cpp  programwindow.h
